--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, shrink-to-fit=no" />
-    <title>Propbase :: Index</title>
+    <title>Propbase :: Home</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/side-nav.css">
@@ -145,7 +145,7 @@
                     </div>
                 </div>
 
-                <div class="welcome-cover d-flex">
+                <div class="welcome-cover">
                     <div class="content-block d-flex">
                         <div class="img-block">
                             <img src="img/home-welcome.svg" alt="">
@@ -155,9 +155,9 @@
                             <p>The $PROPS portfolio and staking dashboard is your all-in-one tool for managing your $PROPS. </p>
                         </div>
                     </div>
-                    <div class="btn-block">
+                    <!-- <div class="btn-block">
                         <a href="#" class="more-btn btn-def">Learn More</a>
-                    </div>
+                    </div> -->
                 </div>
 
                 <div class="card-sec">
