--- a/staking.html
+++ b/staking.html
@@ -152,7 +152,10 @@
                         <div class="detail-sec-stake">
                             <div class="props-badge">
                                 <span></span>
-                                <span class="props-name">$PROPS Staking App</span>
+                                <span class="props-name">
+                                    <img src="img/icon-img.svg">
+                                    $PROPS Staking App
+                                </span>
                             </div>
                             <div class="welcome-txt">
                                <h3>Welcome to $PROPS Short Term High Yield Staking</h3> 
