Home and nav responsive

--- a/index.html
+++ b/index.html
@@ -85,25 +85,39 @@
                             </a>
                         </li>
                     </ul>
-                </div>
-                <div class="nav-footer-block">
-                    <div class="nav-footer-logo">
-                        <a href="#">
-                            <img src="img/logo-full.svg" alt="">
-                        </a>
+
+                    <div class="mob-nav-btn-block">
+                        <div class="wallet-btn-cover">
+                            <button class="wallet-btn">
+                                0xf7e2...1380bf
+                            </button>
+                            <button class="wallet-btn-copy copy-btn">
+                                <img src="img/copy.svg" alt="">
+                            </button>
+                        </div>
+                        <button class="login-btn">Admin Login <img src="img/user.svg" alt=""></button>
                     </div>
-                    <p class="welcome-msg">Welcome to the future of 
-                        <span>real estate investing!</span></p>
-                    <div class="nav-soc-block">
-                        <a href="#" class="nav-soc">
-                            <img src="img/linkedin.svg" alt="">
-                        </a>
-                        <a href="#" class="nav-soc">
-                            <img src="img/twtr.svg" alt="">
-                        </a>
-                        <a href="#" class="nav-soc">
-                            <img src="img/tele.svg" alt="">
-                        </a>
+
+
+                    <div class="nav-footer-block">
+                        <div class="nav-footer-logo">
+                            <a href="#">
+                                <img src="img/logo-full.svg" alt="">
+                            </a>
+                        </div>
+                        <p class="welcome-msg">Welcome to the future of 
+                            <span>real estate investing!</span></p>
+                        <div class="nav-soc-block">
+                            <a href="#" class="nav-soc">
+                                <img src="img/linkedin.svg" alt="">
+                            </a>
+                            <a href="#" class="nav-soc">
+                                <img src="img/twtr.svg" alt="">
+                            </a>
+                            <a href="#" class="nav-soc">
+                                <img src="img/tele.svg" alt="">
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -124,9 +138,14 @@
                         <span class="info-val">$0.0035</span>
                         <span class="info-val info-val-end">03.54%</span>
                     </div>
-                    <button class="wallet-btn buy-btn">Buy $PROPS</button>
-                    <button class="wallet-btn">Connect wallet</button>
-                    <button class="login-btn">Admin Login <img src="img/user.svg" alt=""></button>
+                    <button class="wallet-btn buy-btn"><img class="cart-mob" src="img/cart-icon.svg" alt=""> <span class="buy-label">Buy $PROPS</span></button>
+                    <div class="wallet-btn-cover wallet-btn-cover-web">
+                        <button class="wallet-btn">0xf7e2...1380bf</button>
+                        <button class="wallet-btn-copy copy-btn">
+                            <img src="img/copy.svg" alt="">
+                        </button>
+                    </div>
+                    <button class="login-btn header-btn-web">Admin Login <img src="img/user.svg" alt=""></button>
                 </div>
             </div>
 
@@ -162,7 +181,7 @@
 
                 <div class="card-sec">
                     <div class="row">
-                        <div class="col-md-4 h-card-col">
+                        <div class="col-xl-4 col-lg-6 col-md-4 col-sm-6 h-card-col">
                             <div class="h-card-block">
                                 <div class="top-block">
                                     <div class="img-block">
@@ -178,7 +197,7 @@
                             </div>
                         </div>
 
-                        <div class="col-md-4 h-card-col">
+                        <div class="col-xl-4 col-lg-6 col-md-4 col-sm-6 h-card-col">
                             <div class="h-card-block">
                                 <div class="top-block">
                                     <div class="img-block">
@@ -194,7 +213,7 @@
                             </div>
                         </div>
 
-                        <div class="col-md-4 h-card-col">
+                        <div class="col-xl-4 col-lg-6 col-md-4 col-sm-6 h-card-col">
                             <div class="h-card-block">
                                 <div class="top-block">
                                     <div class="img-block">
