--- a/staking.html
+++ b/staking.html
@@ -86,25 +86,39 @@
                             </a>
                         </li>
                     </ul>
-                </div>
-                <div class="nav-footer-block">
-                    <div class="nav-footer-logo">
-                        <a href="#">
-                            <img src="img/logo-full.svg" alt="">
-                        </a>
+
+                    <div class="mob-nav-btn-block">
+                        <div class="wallet-btn-cover">
+                            <button class="wallet-btn">
+                                0xf7e2...1380bf
+                            </button>
+                            <button class="wallet-btn-copy copy-btn">
+                                <img src="img/copy.svg" alt="">
+                            </button>
+                        </div>
+                        <button class="login-btn">Admin Login <img src="img/user.svg" alt=""></button>
                     </div>
-                    <p class="welcome-msg">Welcome to the future of 
-                        <span>real estate investing!</span></p>
-                    <div class="nav-soc-block">
-                        <a href="#" class="nav-soc">
-                            <img src="img/linkedin.svg" alt="">
-                        </a>
-                        <a href="#" class="nav-soc">
-                            <img src="img/twtr.svg" alt="">
-                        </a>
-                        <a href="#" class="nav-soc">
-                            <img src="img/tele.svg" alt="">
-                        </a>
+
+
+                    <div class="nav-footer-block">
+                        <div class="nav-footer-logo">
+                            <a href="#">
+                                <img src="img/logo-full.svg" alt="">
+                            </a>
+                        </div>
+                        <p class="welcome-msg">Welcome to the future of 
+                            <span>real estate investing!</span></p>
+                        <div class="nav-soc-block">
+                            <a href="#" class="nav-soc">
+                                <img src="img/linkedin.svg" alt="">
+                            </a>
+                            <a href="#" class="nav-soc">
+                                <img src="img/twtr.svg" alt="">
+                            </a>
+                            <a href="#" class="nav-soc">
+                                <img src="img/tele.svg" alt="">
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -125,9 +139,14 @@
                         <span class="info-val">$0.0035</span>
                         <span class="info-val info-val-end">03.54%</span>
                     </div>
-                    <button class="wallet-btn buy-btn">Buy $PROPS</button>
-                    <button class="wallet-btn">Connect wallet</button>
-                    <button class="login-btn">Admin Login <img src="img/user.svg" alt=""></button>
+                    <button class="wallet-btn buy-btn"><img class="cart-mob" src="img/cart-icon.svg" alt=""> <span class="buy-label">Buy $PROPS</span></button>
+                    <div class="wallet-btn-cover wallet-btn-cover-web">
+                        <button class="wallet-btn">0xf7e2...1380bf</button>
+                        <button class="wallet-btn-copy copy-btn">
+                            <img src="img/copy.svg" alt="">
+                        </button>
+                    </div>
+                    <button class="login-btn header-btn-web">Admin Login <img src="img/user.svg" alt=""></button>
                 </div>
             </div>
 
