--- a/login.html
+++ b/login.html
@@ -18,10 +18,11 @@
                  <div class="welcome-text">Welcome to <span> Propbase</span></div>
                 </div>
                 <div class="form-group">
-                    <div class="input-group">
+                    <div class="input-group alert-msg-cover">
                         <label>Email ID</label>
                         <input type="text" class="form-control">
                         <img src="img/mail-icon.svg" class="icon-left">
+                        <span class="alert-msg">Required *</span>
                     </div>
                     <div class="input-group">
                         <label>Password</label>
