--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             <div class="header-wrapper shadow-bg">
                 <div class="header-title-block">
                     <div class="live-active wallet-btn">
-                        <span class="status"></span> Live on APTOS mainnet
+                        <span class="status"></span> <span class="label-web">Live on</span> APTOS mainnet
                     </div>
                 </div>
                 <div class="right-block">
@@ -141,12 +141,98 @@
                     </div>
                     <button class="wallet-btn buy-btn"><img class="cart-mob" src="img/cart-icon.svg" alt=""> <span class="buy-label">Buy $PROPS</span></button>
                     <div class="wallet-btn-cover wallet-btn-cover-web">
-                        <button class="wallet-btn" data-bs-toggle="modal" data-bs-target="#walletModal">0xf7e2...1380bf</button>
+                        <!-- <button class="wallet-btn" data-bs-toggle="modal" data-bs-target="#walletModal">Connect Wallet</button> -->
+                        <button class="wallet-btn wallet-btn-connected" data-bs-toggle="modal" data-bs-target="#walletModal">0xf7e2...1380bf</button>
                         <button class="wallet-btn-copy copy-btn">
                             <img src="img/copy.svg" alt="">
                         </button>
                     </div>
-                    <button class="login-btn header-btn-web">Admin Login <img src="img/user.svg" alt=""></button>
+                    <!-- <button class="login-btn header-btn-web">Admin Login <img src="img/user.svg" alt=""></button> -->
+                    <!-- Admin btn -->
+                    <div class="admin-h-btn-block d-flex">
+                        <div class="btn-group notify-dropdown">
+                            <button type="button" class="notify-btn dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                                <span class="notify-icon">
+                                    <img src="img/notification.svg" alt="">
+                                    <span class="new"></span>
+                                </span>
+                            </button>
+                            <ul class="dropdown-menu dropdown-menu-end">
+                                <li class="notify-title">
+                                    Notifications
+                                    <span class="count">10</span>
+                                </li>
+                                <li class="dropdown-scrl-li">
+                                    <div class="dropdown-item-cover custom-scroll">
+                                        <button class="dropdown-item unread" type="button">
+                                            <div class="icon">
+                                                <img src="img/notf-logo.svg" alt="">
+                                            </div>
+                                            <div class="det">
+                                                <p><b>Staking period is over</b> for long term stake.</p>
+                                                <div class="time">6 minutes ago</div>
+                                            </div>
+                                        </button>
+                                        <button class="dropdown-item" type="button">
+                                            <div class="icon">
+                                                <img src="img/notf-logo.svg" alt="">
+                                            </div>
+                                            <div class="det">
+                                                <p><b>Staking period is over</b> for long term stake.</p>
+                                                <div class="time">6 minutes ago</div>
+                                            </div>
+                                        </button>
+                                        <button class="dropdown-item unread" type="button">
+                                            <div class="icon">
+                                                <img src="img/notf-logo.svg" alt="">
+                                            </div>
+                                            <div class="det">
+                                                <p><b>Staking period is over</b> for long term stake.</p>
+                                                <div class="time">6 minutes ago</div>
+                                            </div>
+                                        </button>
+                                        <button class="dropdown-item" type="button">
+                                            <div class="icon">
+                                                <img src="img/notf-logo.svg" alt="">
+                                            </div>
+                                            <div class="det">
+                                                <p><b>Staking period is over</b> for long term stake.</p>
+                                                <div class="time">6 minutes ago</div>
+                                            </div>
+                                        </button>
+                                        <button class="dropdown-item" type="button">
+                                            <div class="icon">
+                                                <img src="img/notf-logo.svg" alt="">
+                                            </div>
+                                            <div class="det">
+                                                <p><b>Staking period is over</b> for long term stake.</p>
+                                                <div class="time">6 minutes ago</div>
+                                            </div>
+                                        </button>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+
+                        <div class="btn-group my-acc-dropdown">
+                            <button type="button" class="my-acc-btn dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                                <img src="img/admin-settings.svg" alt=""> <span class="acc-label">My Account</span>
+                            </button>
+                            <ul class="dropdown-menu dropdown-menu-end">
+                                <li>
+                                    <button class="dropdown-item" type="button">
+                                        <img src="img/lock-drpdown.svg" alt=""> Change password
+                                    </button>
+                                </li>
+                                <li>
+                                    <button class="dropdown-item" type="button">
+                                        <img src="img/lock-drpdown.svg" alt=""> Logout
+                                    </button>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+
                 </div>
             </div>
 
