--- a/staking.html
+++ b/staking.html
@@ -215,7 +215,7 @@
                                 <button class="filter-nav-btn active">All</button>
                                 <button class="filter-nav-btn">Upcoming</button>
                                 <button class="filter-nav-btn">Active</button>
-                                <button class="filter-nav-btn">Sold Out</button>
+                                <button class="filter-nav-btn">Done</button>
                             </div>
                         </div>
                     </div>
