--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
     </div>
 
      <!-- change Password -->
-     <div class="modal fade fgt-modal change-pass-modal" id="changePasswordModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+     <div class="modal fade change-pass-modal" id="changePasswordModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
             <div class="modal-header">
@@ -411,14 +411,13 @@
                </button>
                <div class="heading-top">
                 <div class="header-sec">
-                    <h4 class="modal-title" id="exampleModalLabel">Forgot <span>Password</span></h4>
+                    <h4 class="modal-title" id="exampleModalLabel">Change <span>Password</span></h4>
                     <h5>
-                        Enter your registered mail id to send a link in your mail
-                        And change your password 
+                        Enter your new password
                     </h5>
                 </div>
                 <div class="icon-sec">
-                    <img src="img/fgt-img.svg" class="icon-right">
+                    <img src="img/change_password.svg" class="icon-right">
                 </div>
             </div>
             </div>
@@ -426,17 +425,26 @@
                
                 <div class="form-group">
                     <div class="input-group">
-                        <label>Email ID</label>
+                        <label>Old password</label>
                         <input type="text" class="form-control">
-                        <img src="img/mail-icon.svg" class="fgt-mail-icon">
+                        <img src="img/pass-icon.svg" class="fgt-mail-icon">
+                        <button class="fgt-view-icon"><img src="img/view.svg"></button>
+                    </div>
+                    <div class="input-group">
+                        <label>Enter New password</label>
+                        <input type="text" class="form-control">
+                        <img src="img/pass-icon.svg" class="fgt-mail-icon">
+                        <button class="fgt-view-icon"><img src="img/view.svg"></button>
+                    </div>
+                    <div class="input-group">
+                        <label>Re Enter password</label>
+                        <input type="text" class="form-control">
+                        <img src="img/pass-icon.svg" class="fgt-mail-icon">
+                        <button class="fgt-view-icon"><img src="img/view.svg"></button>
                     </div>
                     <div class="btn-otr">
-                        <button class="back-login-btn">
-                            <img src="img/back-arw.svg">
-                            Back to login
-                        </button>
                         <button class="send-btn">
-                           Send
+                           Submit
                         </button>
                     </div>
                 </div>
