--- a/user-stakes.html
+++ b/user-stakes.html
@@ -296,6 +296,17 @@
                                     <td>ID573463463456</td>
                                     <td>Pending</td>
                                 </tr>
+
+                                <tr>
+                                    <td colspan="6">
+                                        <div class="table-no-data">
+                                            <div class="img-block">
+                                                <img src="img/no-data.svg" alt="">
+                                            </div>
+                                            <p>NO DATA FOUND</p>
+                                        </div>
+                                    </td>
+                                </tr>
                                 
                             </tbody>
                             
