--- a/rewards-vesting-edit.html
+++ b/rewards-vesting-edit.html
@@ -226,12 +226,12 @@
                                           </div>
                                     </div>
                                     <div class="action-otr">
-                                        <div class="edit-icon">
+                                        <button class="edit-icon p-0">
                                             <img src="img/edit.svg" class="img-edit">
-                                        </div>
-                                        <div class="delete-icon">
+                                        </button>
+                                        <button class="delete-icon p-0" data-bs-toggle="modal" data-bs-target="#deleteModal">
                                             <img src="img/delete.svg" class="img-delete">
-                                        </div>
+                                        </button>
                                     </div>
                                 </div>
                                 <div class="form-group">
@@ -266,12 +266,12 @@
                                           </div>
                                     </div>
                                     <div class="action-otr">
-                                        <div class="edit-icon">
+                                        <button class="edit-icon p-0">
                                             <img src="img/edit.svg" class="img-edit">
-                                        </div>
-                                        <div class="delete-icon">
+                                        </button>
+                                        <button class="delete-icon p-0" data-bs-toggle="modal" data-bs-target="#deleteModal">
                                             <img src="img/delete.svg" class="img-delete">
-                                        </div>
+                                        </button>
                                     </div>
                                 </div>
                                 <div class="form-group">
@@ -309,12 +309,12 @@
                                           </div>
                                     </div>
                                     <div class="action-otr">
-                                        <div class="edit-icon">
+                                        <button class="edit-icon p-0">
                                             <img src="img/edit.svg" class="img-edit">
-                                        </div>
-                                        <div class="delete-icon">
+                                        </button>
+                                        <button class="delete-icon p-0" data-bs-toggle="modal" data-bs-target="#deleteModal">
                                             <img src="img/delete.svg" class="img-delete">
-                                        </div>
+                                        </button>
                                     </div>
                                 </div>
                                 <div class="form-group">
@@ -349,12 +349,12 @@
                                           </div>
                                     </div>
                                     <div class="action-otr">
-                                        <div class="edit-icon">
+                                        <button class="edit-icon p-0">
                                             <img src="img/edit.svg" class="img-edit">
-                                        </div>
-                                        <div class="delete-icon">
+                                        </button>
+                                        <button class="delete-icon p-0" data-bs-toggle="modal" data-bs-target="#deleteModal">
                                             <img src="img/delete.svg" class="img-delete">
-                                        </div>
+                                        </button>
                                     </div>
                                 </div>
                                 <div class="vesting-btn-otr">
@@ -483,6 +483,36 @@
             </div>
         </div>
     </div>
+
+    <!-- Delete modal -->
+    <div class="modal fade custom-modal success-modal delete-confirm" id="deleteModal" tabindex="-1"
+        aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
+                        <img src="img/modal-close.svg" alt="">
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <div class="crate-stake-modal-body">
+                        <div class="modal-title">
+                            <img src="img/delete-modal.svg">
+                            <h4 class="mt-2">
+                                Are you sure you want to delete?
+                            </h4>
+                        </div>
+    
+                        <div class="text-center btn-otr">
+                            <button class="btn-cancel">Cancel</button>
+                            <button class="btn-black">Confirm</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <script src="js/jquery-3.2.1.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
