Delete modal claim modal

--- a/create-stake.html
+++ b/create-stake.html
@@ -311,7 +311,7 @@
                                             <button class="td-action-btn" data-bs-toggle="modal" data-bs-target="#deleteModal">
                                                 <img src="img/td-delete.svg" alt="">
                                             </button>
-                                            <button class="td-action-btn" data-bs-toggle="modal" data-bs-target="#mintModal">
+                                            <button class="td-action-btn" data-bs-toggle="modal" data-bs-target="#successModal">
                                                 <img src="img/td-success.svg" alt="">
                                             </button>
                                         </div>
@@ -336,7 +336,7 @@
                                             <button class="td-action-btn" data-bs-toggle="modal" data-bs-target="#deleteModal">
                                                 <img src="img/td-delete.svg" alt="">
                                             </button>
-                                            <button class="td-action-btn" data-bs-toggle="modal" data-bs-target="#mintModal">
+                                            <button class="td-action-btn" data-bs-toggle="modal" data-bs-target="#successModal">
                                                 <img src="img/td-success.svg" alt="">
                                             </button>
                                         </div>
@@ -361,7 +361,7 @@
                                             <button class="td-action-btn" data-bs-toggle="modal" data-bs-target="#deleteModal">
                                                 <img src="img/td-delete.svg" alt="">
                                             </button>
-                                            <button class="td-action-btn" data-bs-toggle="modal" data-bs-target="#mintModal">
+                                            <button class="td-action-btn" data-bs-toggle="modal" data-bs-target="#successModal">
                                                 <img src="img/td-success.svg" alt="">
                                             </button>
                                         </div>
@@ -386,7 +386,7 @@
                                             <button class="td-action-btn" data-bs-toggle="modal" data-bs-target="#deleteModal">
                                                 <img src="img/td-delete.svg" alt="">
                                             </button>
-                                            <button class="td-action-btn" data-bs-toggle="modal" data-bs-target="#mintModal">
+                                            <button class="td-action-btn" data-bs-toggle="modal" data-bs-target="#successModal">
                                                 <img src="img/td-success.svg" alt="">
                                             </button>
                                         </div>
@@ -557,6 +557,35 @@
                 </div>
             </div>
         </div>
+        </div>
+    </div>
+
+    <!-- Delete modal -->
+    <div class="modal fade custom-modal success-modal delete-confirm" id="deleteModal" tabindex="-1"
+        aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
+                        <img src="img/modal-close.svg" alt="">
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <div class="crate-stake-modal-body">
+                        <div class="modal-title">
+                            <img src="img/delete-modal.svg">
+                            <h4 class="mt-2">
+                                Are you sure you want to delete?
+                            </h4>
+                        </div>
+    
+                        <div class="text-center btn-otr">
+                            <button class="btn-cancel">Cancel</button>
+                            <button class="btn-black">Confirm</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     
