--- a/create-stake.html
+++ b/create-stake.html
@@ -392,6 +392,14 @@
                                         </div>
                                     </td>
                                 </tr>
+                                <td colspan="11">
+                                    <div class="table-no-data">
+                                        <div class="img-block">
+                                            <img src="img/no-data.svg" alt="">
+                                        </div>
+                                        <p>NO DATA FOUND</p>
+                                    </div>
+                                </td>
                             </tbody>
                             
                         </table>
