--- a/login.html
+++ b/login.html
@@ -20,13 +20,13 @@
                 <div class="form-group">
                     <div class="input-group alert-msg-cover">
                         <label>Email ID</label>
-                        <input type="text" class="form-control">
+                        <input type="text" class="form-control" placeholder="EmailID">
                         <img src="img/mail-icon.svg" class="icon-left">
                         <span class="alert-msg">Required *</span>
                     </div>
                     <div class="input-group">
                         <label>Password</label>
-                        <input type="password" class="form-control">
+                        <input type="password" class="form-control" placeholder="Password">
                         <img src="img/pass-icon.svg" class="icon-left-ps">
                         <button class="icon-pass"><img src="img/view.svg"></button>
                     </div>
