login bug fixing

--- a/login.html
+++ b/login.html
@@ -40,7 +40,7 @@
                                 <span class="checkmark"></span>
                               </label>
                         </div>
-                        <div class="fgt-link" data-bs-toggle="modal" data-bs-target="#resetPasswordModal">
+                        <div class="fgt-link" data-bs-toggle="modal" data-bs-target="#forgotPasswordModal">
                             Forgot Password
                         </div>
                     </div>
