staking no data

--- a/staking.html
+++ b/staking.html
@@ -220,6 +220,14 @@
                         </div>
                     </div>
                     <div class="row">
+                        <!-- No data -->
+                        <div class="table-no-data w-100">
+                            <div class="img-block">
+                                <img src="img/no-data.svg" alt="">
+                            </div>
+                            <p>NO DATA FOUND</p>
+                        </div>
+                        
                         <div class="col-md-4 h-card-col">
                             <div class="h-card-block">
                                 <div class="top-block">
