--- a/staking.html
+++ b/staking.html
@@ -246,7 +246,7 @@
                                         <span class="pool-label">Pool Cap: </span><span class="pool-cont">20,000,000 $PROPS</span>
                                     </div>
                                     <div class="progress-bar-section">
-                                        <div class="progress-bar">
+                                        <div class="progress-bar-block">
                                         </div>
                                         <div class="progress-count">
                                              33%
@@ -337,7 +337,7 @@
                                         <span class="pool-label">Pool Cap: </span><span class="pool-cont">20,000,000 $PROPS</span>
                                     </div>
                                     <div class="progress-bar-section">
-                                        <div class="progress-bar">
+                                        <div class="progress-bar-block">
                                         </div>
                                         <div class="progress-count">
                                              33%
@@ -428,7 +428,7 @@
                                         <span class="pool-label">Pool Cap: </span><span class="pool-cont">20,000,000 $PROPS</span>
                                     </div>
                                     <div class="progress-bar-section">
-                                        <div class="progress-bar">
+                                        <div class="progress-bar-block">
                                         </div>
                                         <div class="progress-count">
                                              33%
@@ -530,7 +530,7 @@
                         <span class="pool-label">Pool Cap: </span><span class="pool-cont">20,000,000 $PROPS</span>
                     </div>
                     <div class="progress-bar-section">
-                        <div class="progress-bar">
+                        <div class="progress-bar-block">
                         </div>
                         <div class="progress-count">
                              33%
@@ -619,7 +619,7 @@
                         <span class="pool-label">Pool Cap: </span><span class="pool-cont">20,000,000 $PROPS</span>
                     </div>
                     <div class="progress-bar-section">
-                        <div class="progress-bar">
+                        <div class="progress-bar-block">
                         </div>
                         <div class="progress-count">
                              33%
