stake modal bug

--- a/create-stake.html
+++ b/create-stake.html
@@ -449,7 +449,7 @@
 
     <!-- Create stake modal -->
 
-    <div class="modal fade custom-modal crate-stake-modal show"  style="display: block; " id="createStakeModal" tabindex="-1" aria-labelledby="createStakeModalLabel"
+    <div class="modal fade custom-modal crate-stake-modal" id="createStakeModal" tabindex="-1" aria-labelledby="createStakeModalLabel"
         aria-hidden="true">
         <div class="modal-dialog modal-lg modal-dialog-centered">
             <div class="modal-content">
