--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                             <img src="img/copy.svg" alt="">
                         </button>
                     </div>
-                    <!-- <button class="login-btn header-btn-web">Admin Login <img src="img/user.svg" alt=""></button> -->
+                    <button class="login-btn header-btn-web"><span class="acc-label">Admin Login</span> <img src="img/user.svg" alt=""></button>
                     <!-- Admin btn -->
                     <div class="admin-h-btn-block d-flex">
                         <div class="btn-group notify-dropdown">
