--- a/potfolio.html
+++ b/potfolio.html
@@ -315,7 +315,7 @@
                     </div>
                     <div class="row gx-2">
 
-                        <div class="col-md-6 portfolio-col">
+                        <div class="col-12 portfolio-col">
                             <div class="portfolio-card">
                                 <div class="title-wrapper">
                                     <div class="title-block">
@@ -350,6 +350,7 @@
                                                     <td class="txt-light">30%</td>
                                                     <td class="txt-grn">3500</td>
                                                     <td>
+                                                        <button class="btn-def claim-btn rewards-btn">Rewards</button>
                                                         <button class="btn-def claim-btn" data-bs-toggle="modal" data-bs-target="#claimRewardModal">Claim</button>
                                                     </td>
                                                 </tr>
@@ -362,7 +363,8 @@
                                                     <td class="txt-light">30%</td>
                                                     <td class="txt-grn">3500</td>
                                                     <td>
-                                                        <button class="btn-def claim-btn">Claim</button>
+                                                        <button class="btn-def claim-btn rewards-btn">Rewards</button>
+                                                        <button class="btn-def claim-btn" data-bs-toggle="modal" data-bs-target="#claimRewardModal">Claim</button>
                                                     </td>
                                                 </tr>
                                                 <tr>
@@ -374,7 +376,8 @@
                                                     <td class="txt-light">30%</td>
                                                     <td class="txt-grn">3500</td>
                                                     <td>
-                                                        <button class="btn-def claim-btn">Claim</button>
+                                                        <button class="btn-def claim-btn rewards-btn">Rewards</button>
+                                                        <button class="btn-def claim-btn" data-bs-toggle="modal" data-bs-target="#claimRewardModal">Claim</button>
                                                     </td>
                                                 </tr>
                                                 <tr>
@@ -386,7 +389,8 @@
                                                     <td class="txt-light">30%</td>
                                                     <td class="txt-grn">3500</td>
                                                     <td>
-                                                        <button class="btn-def claim-btn">Claim</button>
+                                                        <button class="btn-def claim-btn rewards-btn">Rewards</button>
+                                                        <button class="btn-def claim-btn" data-bs-toggle="modal" data-bs-target="#claimRewardModal">Claim</button>
                                                     </td>
                                                 </tr>
                                                 
@@ -397,7 +401,7 @@
                             </div>
                         </div>
 
-                        <div class="col-md-6 portfolio-col">
+                        <!-- <div class="col-md-6 portfolio-col">
                             <div class="portfolio-card">
                                 <div class="title-wrapper">
                                     <div class="title-block">
@@ -452,7 +456,7 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
 
 
 
