--- a/staking.html
+++ b/staking.html
@@ -12,8 +12,9 @@
     <link rel="stylesheet" href="css/home.css">
     <link rel="stylesheet" href="css/staking.css">
     <link rel="stylesheet" href="css/modal.css">
+    <link rel="stylesheet" href="css/dark-theme.css">
 </head>
-<body>
+<body  class="theme-dark">
     <div class="body-wrapper">
         <!-- Side nav -->
         <div class="nav-block">
