Light theme new changes

--- a/staking.html
+++ b/staking.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, shrink-to-fit=no" />
-    <title>Propbase :: Index</title>
+    <title>Propbase :: Staking</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/side-nav.css">
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="css/modal.css">
     <link rel="stylesheet" href="css/dark-theme.css">
 </head>
-<body class="theme-dark">
+<body>
     <div class="body-wrapper">
         <!-- Side nav -->
         <div class="nav-block">
@@ -538,7 +538,7 @@
                         </div>
                     </div>
                     <div class="btn-outer">
-                        <button class="btn-default">APY:40%</button>
+                        <button class="btn-default">APY: 40%</button>
                         <button class="btn-default btn-duration">Duration:3 Months</button>
                     </div>
                     <div class="lock-period">
@@ -600,7 +600,7 @@
         </div>
        </div>
        <!-- withdraw modal -->
-       <div class="modal fade custom-modal stake-modal" id="unstakingModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+       <div class="modal fade custom-modal stake-modal show" style="display: block; background-color: #ddd;" id="unstakingModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
             <div class="modal-header">
@@ -627,8 +627,8 @@
                         </div>
                     </div>
                     <div class="btn-outer">
-                        <button class="btn-default">APY:40%</button>
-                        <button class="btn-default btn-duration">Duration:3 Months</button>
+                        <button class="btn-default">APY: <span>40%</span></button>
+                        <button class="btn-default btn-duration">Duration: <span>3 Months</span></button>
                     </div>
                     <div class="lock-period">
                        Lock-In Period : 01 May to 01 June
