--- a/login.html
+++ b/login.html
@@ -14,8 +14,11 @@
        <div class="login-wrapper">
             <div class="login-left-block">
                 <div class="logo-section-block">
-                  <img src="img/logo-full.svg" class="logo-img">
-                 <div class="welcome-text">Welcome to <span> Propbase</span></div>
+                  <img src="img/login-blue.svg" class="logo-img">
+                 <div class="welcome-text">
+                    Welcome to <span> Propbase</span>
+                    <h4>The future of Real Estate Investing!</h4>
+                </div>
                 </div>
                 <div class="form-group">
                     <div class="input-group alert-msg-cover">
